--- a/step02_연산자/04비교연산자.html
+++ b/step02_연산자/04비교연산자.html
@@ -13,14 +13,14 @@
         let a = 1
         let b = '1'
 
-        console.log(a == b) // 문자와 숫자의 값을 비교한다.
+        console.log(a == b) //  동등연산자. 문자와 숫자의 값을 비교한다.
         console.log(a === b) // 문자와 숫자의 값과 type을 비교한다. a = number, b = string
         console.log(a > b)
         console.log(a <= b)
         console.log(a >= b)
 
-        console.log(a !== b)  
-        console.log(a != b)
+        console.log(a !== b) // 두 값이 같지 않은가? type도 비교함
+        console.log(a != b)  // 두 값이 같지 않은가? 동등연산자와의 반대값 
 
 
     </script>
